# BadBunny

./: .env.example  README.md  pyproject.toml
data/: ticketswap_madrid_badbunny_urls.txt
docs/: TICKETSWAP_PURCHASE_ANALYSIS.md
scripts/: run_all.cmd  run_all.ps1  run_all.sh
src/badbunny_monitor/: __init__.py  communication.py  config.py  gui.py  main.py  monitor.py  runtime_state.py  scraper.py  telegram_bot.py  tickerswap.py  tracing.py
tests/: test_cart_strategy.py  test_config_env.py  test_filtering.py  test_modular_layers.py  test_pack_parsing.py  test_price_and_buy.py  test_query_iteration.py  test_seen.py
